--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -456,24 +456,33 @@ jobs:
           echo "🖼️ Generando imagen del resumen Cypress..."
           mkdir -p metrics
 
-          # 1️⃣ Generar un resumen en Markdown legible
           echo "## 🧪 Cypress Summary" > metrics/cypress_summary.md
-          if [ -f "metrics/cypress.json" ]; then
-            total=$(jq '.total' metrics/cypress.json)
-            passed=$(jq '.passed' metrics/cypress.json)
-            failed=$(jq '.failed' metrics/cypress.json)
-            skipped=$(jq '.skipped' metrics/cypress.json)
-            echo "" >> metrics/cypress_summary.md
-            echo "| Total | Passed | Failed | Skipped |" >> metrics/cypress_summary.md
-            echo "|------:|-------:|-------:|--------:|" >> metrics/cypress_summary.md
-            echo "| $total | $passed | $failed | $skipped |" >> metrics/cypress_summary.md
 
-            echo "" >> metrics/cypress_summary.md
-            echo "### 🧾 Detalle por Spec" >> metrics/cypress_summary.md
-            jq -r '.summary[] | "| \(.spec) | \(.tests) | \(.failing) | \(.skipped) |"' metrics/cypress.json 2>/dev/null \
-              || echo "_No hay resumen detallado disponible_" >> metrics/cypress_summary.md
+          # Si el archivo no existe o no es JSON válido, usar valores por defecto
+          if jq empty metrics/cypress.json 2>/dev/null; then
+            total=$(jq -r '.total // 0' metrics/cypress.json)
+            passed=$(jq -r '.passed // 0' metrics/cypress.json)
+            failed=$(jq -r '.failed // 0' metrics/cypress.json)
+            skipped=$(jq -r '.skipped // 0' metrics/cypress.json)
           else
-            echo "_⚠️ No se encontró metrics/cypress.json._" >> metrics/cypress_summary.md
+            echo "⚠️ Archivo metrics/cypress.json inválido o vacío. Usando valores 0."
+            total=0; passed=0; failed=0; skipped=0
+          fi
+
+          echo "" >> metrics/cypress_summary.md
+          echo "| Total | Passed | Failed | Skipped |" >> metrics/cypress_summary.md
+          echo "|------:|-------:|-------:|--------:|" >> metrics/cypress_summary.md
+          echo "| $total | $passed | $failed | $skipped |" >> metrics/cypress_summary.md
+
+          echo "" >> metrics/cypress_summary.md
+          echo "### 🧾 Detalle por Spec" >> metrics/cypress_summary.md
+
+          # Si el resumen existe, imprimirlo en tabla
+          if jq -e '.summary' metrics/cypress.json >/dev/null 2>&1; then
+            jq -r '.summary[] | "| \(.spec // "-") | \(.tests // 0) | \(.failing // 0) | \(.skipped // 0) |"' metrics/cypress.json 2>/dev/null \
+              >> metrics/cypress_summary.md
+          else
+            echo "_No hay resumen detallado disponible_" >> metrics/cypress_summary.md
           fi
 
           # 2️⃣ Instalar dependencias para convertir Markdown a PNG
@@ -482,10 +491,10 @@ jobs:
           npm install -g md-to-pdf
 
           # 3️⃣ Convertir Markdown a PDF y luego a PNG
-          md-to-pdf metrics/cypress_summary.md --dest metrics/cypress_summary.pdf
-          pdftoppm metrics/cypress_summary.pdf metrics/cypress_summary -png
+          md-to-pdf metrics/cypress_summary.md --dest metrics/cypress_summary.pdf || echo "⚠️ md-to-pdf falló"
+          pdftoppm metrics/cypress_summary.pdf metrics/cypress_summary -png || echo "⚠️ pdftoppm falló"
 
-          echo "✅ Imagen generada en metrics/cypress_summary-1.png"
+          echo "✅ Imagen generada en metrics/cypress_summary-1.png (si todo fue bien)"
 
       - name: 📤 Subir imagen Cypress Summary a gh-pages
         if: always()
