--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -450,50 +450,42 @@ jobs:
 
           git push --force "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" gh-pages
 
-      - name: 🧾 Generar y publicar resumen Cypress en Markdown
+      - name: 🧾 Guardar y publicar el resumen de Actions como Markdown
         if: always()
         run: |
-          echo "🧪 Generando resumen Cypress en Markdown..."
+          echo "🧩 Guardando el resumen de GitHub Actions..."
+
           mkdir -p metrics
 
-          echo "## 🧪 Cypress Summary" > metrics/cypress_summary.md
-
-          if jq empty metrics/cypress.json 2>/dev/null; then
-            total=$(jq -r '.total // 0' metrics/cypress.json)
-            passed=$(jq -r '.passed // 0' metrics/cypress.json)
-            failed=$(jq -r '.failed // 0' metrics/cypress.json)
-            skipped=$(jq -r '.skipped // 0' metrics/cypress.json)
+          # Copiar el resumen generado por GitHub Actions
+          if [ -n "$GITHUB_STEP_SUMMARY" ] && [ -f "$GITHUB_STEP_SUMMARY" ]; then
+            cp "$GITHUB_STEP_SUMMARY" metrics/summary.md
+            echo "✅ Resumen copiado desde \$GITHUB_STEP_SUMMARY"
           else
-            total=0; passed=0; failed=0; skipped=0
+            echo "_⚠️ No se encontró el resumen de Actions._" > metrics/summary.md
           fi
 
-          echo "" >> metrics/cypress_summary.md
-          echo "| Total | Passed | Failed | Skipped |" >> metrics/cypress_summary.md
-          echo "|------:|-------:|-------:|--------:|" >> metrics/cypress_summary.md
-          echo "| $total | $passed | $failed | $skipped |" >> metrics/cypress_summary.md
+          # Adjuntar metadatos
+          echo "" >> metrics/summary.md
+          echo "---" >> metrics/summary.md
+          echo "**Commit:** ${GITHUB_SHA}" >> metrics/summary.md
+          echo "**Branch:** ${GITHUB_REF_NAME}" >> metrics/summary.md
+          echo "**Generado:** $(date -u +%FT%TZ)" >> metrics/summary.md
 
-          echo "" >> metrics/cypress_summary.md
-          echo "### 🧾 Detalle por Spec" >> metrics/cypress_summary.md
-          jq -r '.summary[]? | "| \(.spec) | \(.tests) | \(.failing) | \(.skipped) |"' metrics/cypress.json 2>/dev/null \
-            || echo "_No hay resumen detallado disponible_" >> metrics/cypress_summary.md
-
-          echo "✅ Markdown generado en metrics/cypress_summary.md"
-          cat metrics/cypress_summary.md
-
-          echo "📤 Subiendo resumen Markdown a gh-pages..."
+          # Publicar en gh-pages
+          echo "🚀 Publicando summary.md en gh-pages..."
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
 
           mkdir -p .ghpages-temp
-          cp metrics/cypress_summary.md .ghpages-temp/
-          cp metrics/meta.json .ghpages-temp/
+          cp metrics/summary.md .ghpages-temp/
+          cp metrics/meta.json .ghpages-temp/ || true
 
           cd .ghpages-temp
           git init
-          git checkout -B gh-pages  # 👈 este cambio evita el error
-
+          git checkout -B gh-pages
           git add .
-          git commit -m "🧪 Cypress summary (Markdown) $(date -u +%FT%TZ)"
+          git commit -m "📋 Workflow Summary $(date -u +%FT%TZ)"
           git push --force "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" gh-pages
 
-          echo "✅ Publicado en GitHub Pages"
+          echo "✅ Publicado en https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/summary.md"
