--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -450,42 +450,41 @@ jobs:
 
           git push --force "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" gh-pages
 
-      - name: 🧾 Guardar y publicar el resumen de Actions como Markdown
+      - name: 📄 Guardar summary de Cypress en gh-pages
         if: always()
         run: |
-          echo "🧩 Guardando el resumen de GitHub Actions..."
-
+          echo "🧾 Guardando el summary completo de GitHub Actions..."
+          
           mkdir -p metrics
 
-          # Copiar el resumen generado por GitHub Actions
-          if [ -n "$GITHUB_STEP_SUMMARY" ] && [ -f "$GITHUB_STEP_SUMMARY" ]; then
-            cp "$GITHUB_STEP_SUMMARY" metrics/summary.md
-            echo "✅ Resumen copiado desde \$GITHUB_STEP_SUMMARY"
-          else
-            echo "_⚠️ No se encontró el resumen de Actions._" > metrics/summary.md
-          fi
+          # Copiar el contenido del summary actual a un archivo local
+          cp "$GITHUB_STEP_SUMMARY" metrics/cypress_summary.md
 
-          # Adjuntar metadatos
-          echo "" >> metrics/summary.md
-          echo "---" >> metrics/summary.md
-          echo "**Commit:** ${GITHUB_SHA}" >> metrics/summary.md
-          echo "**Branch:** ${GITHUB_REF_NAME}" >> metrics/summary.md
-          echo "**Generado:** $(date -u +%FT%TZ)" >> metrics/summary.md
+          # Agregar metadatos del commit y rama
+          {
+            echo ""
+            echo "---"
+            echo "**Commit:** ${GITHUB_SHA}"
+            echo "**Branch:** ${GITHUB_REF_NAME}"
+            echo "**Generado:** $(date -u +%FT%TZ)"
+          } >> metrics/cypress_summary.md
 
-          # Publicar en gh-pages
-          echo "🚀 Publicando summary.md en gh-pages..."
+          echo "✅ Summary guardado en metrics/cypress_summary.md"
+          cat metrics/cypress_summary.md
+
+          # 🚀 Subirlo a gh-pages
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
 
           mkdir -p .ghpages-temp
-          cp metrics/summary.md .ghpages-temp/
+          cp metrics/cypress_summary.md .ghpages-temp/
           cp metrics/meta.json .ghpages-temp/ || true
 
           cd .ghpages-temp
           git init
-          git checkout -B gh-pages
+          git checkout -b gh-pages
           git add .
-          git commit -m "📋 Workflow Summary $(date -u +%FT%TZ)"
+          git commit -m "🧪 Cypress summary (from GITHUB_STEP_SUMMARY) $(date -u +%FT%TZ)"
           git push --force "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" gh-pages
 
-          echo "✅ Publicado en https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/summary.md"
+          echo "✅ Cypress summary publicado en GitHub Pages"
