--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -450,26 +450,38 @@ jobs:
 
           git push --force "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" gh-pages
 
-      - name: 🚀 Publicar artefactos Cypress en gh-pages
+      - name: 🧾 Guardar Cypress Summary en gh-pages
         if: always()
         run: |
-          echo "📦 Publicando artefactos de Cypress en gh-pages..."
+          echo "🧾 Guardando el Cypress Summary completo..."
+          mkdir -p metrics
+
+          # Copiar el contenido del summary actual
+          cp "$GITHUB_STEP_SUMMARY" metrics/cypress_summary.md
+
+          # Agregar metadatos del commit y rama
+          {
+            echo ""
+            echo "---"
+            echo "**Commit:** ${GITHUB_SHA}"
+            echo "**Branch:** ${GITHUB_REF_NAME}"
+            echo "**Generado:** $(date -u +%FT%TZ)"
+          } >> metrics/cypress_summary.md
+
+          echo "✅ Guardado en metrics/cypress_summary.md"
+          cat metrics/cypress_summary.md
+
+          # 🚀 Publicar en gh-pages
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
 
-          # Crear carpeta temporal y copiar los resultados de Cypress
+          rm -rf .ghpages-temp
           mkdir -p .ghpages-temp
-          cp -r artifacts/cypress-results/* .ghpages-temp/
-
-          # Incluir metadatos
-          echo "{ \"generated_at\": \"$(date -u +%FT%TZ)\", \"commit\": \"${GITHUB_SHA}\", \"branch\": \"${GITHUB_REF_NAME}\" }" > .ghpages-temp/meta.json
-
+          cp metrics/cypress_summary.md .ghpages-temp/
+          
           cd .ghpages-temp
-          rm -rf .git  # Limpia repos anteriores
           git init
-          git checkout -B gh-pages
+          git checkout -b gh-pages
           git add .
-          git commit -m "📦 Cypress artifacts $(date -u +%FT%TZ)"
+          git commit -m "📊 Cypress summary $(date -u +%FT%TZ)"
           git push --force "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" gh-pages
-
-          echo "✅ Artefactos Cypress publicados en GitHub Pages"
