--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -473,3 +473,17 @@ jobs:
           git push --force "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" gh-pages
 
           echo "✅ Artefactos Cypress publicados en GitHub Pages"
+
+
+      - name: 📤 Publicar resultados de Cypress en gh-pages
+        if: always()
+        run: |
+          mkdir -p .ghpages-temp
+          cp out/cypress/results.json .ghpages-temp/cypress-results.json
+          cd .ghpages-temp
+          git init
+          git checkout -b gh-pages
+          git add .
+          git commit -m "📊 Cypress results $(date -u +%FT%TZ)"
+          git push --force "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" gh-pages
+
