agregada la publicacion de solicitud de pagos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=ArreglaYaBackend
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:12345}
+# Local datasource explícito para desarrollo
+spring.datasource.url=jdbc:postgresql://localhost:5432/ArreglaYaBackend
+spring.datasource.username=postgres
+spring.datasource.password=12345
+# Placeholders originales (comentados)
+# spring.datasource.url=${SPRING_DATASOURCE_URL}
+# spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+# spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:12345}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
@@ -67,3 +72,5 @@ integrations.matching.publish-top3-channel=${MATCHING_PUBLISH_TOP3_CHANNEL:match
 integrations.matching.publish-top3-event-name=${MATCHING_PUBLISH_TOP3_EVENT_NAME:emitida}
 integrations.matching.publish-cotizaciones-channel=${MATCHING_PUBLISH_COT_CHANNEL:matching.solicitud.emitida}
 integrations.matching.publish-cotizaciones-event-name=${MATCHING_PUBLISH_COT_EVENT:emitida}
+integrations.matching.publish-pago-channel=${MATCHING_PUBLISH_PAGO_CHANNEL:matching.pago.emitida}
+integrations.matching.publish-pago-event-name=${MATCHING_PUBLISH_PAGO_EVENT:emitida}
