updated aplication properties

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -10,3 +10,5 @@ spring.jpa.show-sql=true
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration,org.springframework.boot.autoconfigure.amqp.RabbitAnnotationDrivenConfiguration
+
