--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
   k6-load:
     name: k6 (smoke/stress/soak/spike)
     runs-on: ubuntu-latest
-    needs: backend-tests
+    needs: [backend-tests]
     services:
       postgres:
         image: postgres:15
@@ -257,7 +257,7 @@ jobs:
   e2e-tests:
     name: Cypress E2E
     runs-on: ubuntu-latest
-    needs: backend-tests
+    needs: [backend-tests]
     permissions:
       contents: write
     services:
