agregado login para el front

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -74,3 +74,8 @@ integrations.matching.publish-cotizaciones-channel=${MATCHING_PUBLISH_COT_CHANNE
 integrations.matching.publish-cotizaciones-event-name=${MATCHING_PUBLISH_COT_EVENT:emitida}
 integrations.matching.publish-pago-channel=${MATCHING_PUBLISH_PAGO_CHANNEL:matching.pago.emitida}
 integrations.matching.publish-pago-event-name=${MATCHING_PUBLISH_PAGO_EVENT:emitida}
+
+# Users service integration (login)
+users.service.base-url=${USERS_BASE_URL:http://dev.desarrollo2-usuarios.shop:8081}
+users.service.login-path=${USERS_LOGIN_PATH:/api/users/login}
+users.service.timeout-ms=${USERS_TIMEOUT_MS:4000}
